--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "A chess engine",
   "main": "index.js",
   "scripts": {
-    "test": "test",
-    "prepare": "husky"
+    "prepare": "husky",
+    "lint": "next lint",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "keywords": [
     "chess"
@@ -19,6 +22,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
+    "@vitest/coverage-v8": "^1.5.3",
+    "@vitest/ui": "^1.5.3",
     "eslint": "^8.57.0",
     "globals": "^15.1.0",
     "husky": "^9.0.11",
